docs/envoy/v1.16.0/_sources/api-v2/config/filter/http/cache/v2alpha/cache.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/cache/v2alpha/cache.proto:

HTTP Cache Filter
=================

.. _extension_envoy.filters.http.cache:


This extension may be referenced by the qualified name *envoy.filters.http.cache*

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. warning::
   This API is work-in-progress and is subject to breaking changes.


.. _envoy_api_msg_config.filter.http.cache.v2alpha.CacheConfig:

config.filter.http.cache.v2alpha.CacheConfig
--------------------------------------------

`[config.filter.http.cache.v2alpha.CacheConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/config/filter/http/cache/v2alpha/cache.proto#L24>`_


.. code-block:: json

  {
    "typed_config": "{...}",
    "allowed_vary_headers": []
  }

.. _envoy_api_field_config.filter.http.cache.v2alpha.CacheConfig.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Config specific to the cache storage implementation.
  
  
.. _envoy_api_field_config.filter.http.cache.v2alpha.CacheConfig.allowed_vary_headers:

allowed_vary_headers
  (:ref:`type.matcher.StringMatcher <envoy_api_msg_type.matcher.StringMatcher>`) List of matching rules that defines allowed *Vary* headers.
  
  The *vary* response header holds a list of header names that affect the
  contents of a response, as described by
  https://httpwg.org/specs/rfc7234.html#caching.negotiated.responses.
  
  During insertion, *allowed_vary_headers* acts as a allowlist: if a
  response's *vary* header mentions any header names that aren't matched by any rules in
  *allowed_vary_headers*, that response will not be cached.
  
  During lookup, *allowed_vary_headers* controls what request headers will be
  sent to the cache storage implementation.
  
  



